# scrapbox-analytics

./: .gitignore  Makefile  README.md  count.py  count_pages.py  plot_pages.ipynb  pyproject.toml
dumps/: sample.json
