[tool.poetry]
name = "scrapbox-analytics"
version = "2019.12.23"
description = ""
authors = ["fuyutarow <fuyutarow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.1.2"
maya = "^0.6.1"
pandas = "^0.25.3"
seaborn = "^0.10.0"
yapf = "^0.29.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry = 'poetry.console:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

